CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(ivolve)

# Set Cmake to build runtime in cwd
SET (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR})

FIND_PACKAGE(ImageMagick COMPONENTS Magick++)

SET(CMAKE_CXX_FLAGS "-g -Wall")
ADD_SUBDIRECTORY(src)

INCLUDE_DIRECTORIES(${ImageMagick_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(${ImageMagick_LIBRARIES})
